<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_share"
        android:title="@string/menu_share"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/menu_item_fullscreen"
        android:icon="@drawable/ic_action_expand"
        android:title="@string/menu_fullscreen"/>

    <item
        android:id="@+id/menu_item_download"
        android:icon="@drawable/ic_action_download"
        android:title="@string/menu_download"/>

    <item
        android:id="@+id/menu_item_wallpaper"
        android:icon="@drawable/ic_action_picture"
        android:title="@string/menu_wallpaper"/>
</menu>